# iochat-server

./: .clang-format  .gitignore  CMakeLists.txt  config.ini
chat-server/: CMakeLists.txt  chat_server.cpp
gate-server/: CMakeLists.txt  gate_server.cpp  http_connection.cpp  http_connection.h  logic_system.cpp  logic_system.h  server.cpp  server.h  status_grpc_client.cpp  status_grpc_client.h  verify_grpc_client.cpp  verify_grpc_client.h
proto/: gen_pb.bat  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
public/: CMakeLists.txt  config_manager.h  export.h  grpc_connection_pool.h  inc.h  io_service_pool.cpp  io_service_pool.h  mysql_connection_pool.cpp  mysql_connection_pool.h  mysql_dao.cpp  mysql_dao.h  mysql_manager.cpp  mysql_manager.h  redis_connection_pool.cpp  redis_connection_pool.h  redis_manager.h  singleton.h
status-server/: CMakeLists.txt  status_server.cpp  status_server_impl.cpp  status_server_impl.h
